--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
         <a><span>My Watchlist</span></a>
     </header>
     <div class="list" id="list">
-        <form class="example" action="watchlist.html">
+        <form  action="watchlist.html">
             <div class="search-container">
                 <i class="fa fa-search"></i>
                 <input type="text"  name="search" placeholder="Blade Runner">
                 <button type="submit">Search</button> 
             </div>
           </form>
-          <img src="images/film-black.png" class="filler-img"/>
+          <div class="movie-list">
+            <img src="images/film-black.png" class="filler-img"/>
+            <p>Start exploring</p>
+          </div>
+          
     </div>
 
 
