--- a/watchlist.html
+++ b/watchlist.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="index.css">
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/8e15126712.js" crossorigin="anonymous"></script>
+
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,20 +18,35 @@
 </head>
 
 <body>
-
-    <header>
-        <p>My Watchlist</p>
-        <a><span>Search for movies</span></a>
-    </header>
-    <form class="example" action="watchlist.html">
-        <div class="search-container">
-            <input type="text"  name="search" placeholder="Blade Runner">
-            <!-- <i class="fa fa-search"></i> -->
-            <button type="submit">Search</button>
+    <div class="container" id="list">
+        <div class="header-div">
+            <header>
+                <p>My Watchlist</p>
+                <a href="index.html">Search for movies</a>
+            </header>
         </div>
-
-      </form>
+        <div>
+            <form id="myForm">
+                <div class="search-container">
+                    <i class="fa fa-search"></i>
+                    <input type="text" name="search" placeholder="Blade Runner">
+                    <button id="search">Search</button>
+                </div>
+            </form>
+        </div>
+        <div class="movie-list" id="movie-list">
+            <img src="images/movie-roll.png" class="filler-img" />
+            <p>Start exploring</p>
+        </div>
+    </div>
     <script src="/index.js" type="module"></script>
 </body>
 
 </html>
+
+
+
+
+
+
+<a><span>Search for movies</span></a>
