--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </form>
         </div>
-        <div class="movie-list" id="movie-list">
+        <div class="movie-list movie-list-margin" id="movie-list">
             <img src="images/movie-roll.png" class="filler-img" />
             <p>Start exploring</p>
         </div>
