--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
                 <a href="watchlist.html">My Watchlist</a>
             </header>
         </div>
-        <div>
-            <form id="myForm">
-                <div class="search-container">
-                    <i class="fa fa-search"></i>
-                    <input type="text" name="search" placeholder="Blade Runner">
-                    <button id="search">Search</button>
-                </div>
-            </form>
-        </div>
+        <!-- <div> -->
+            <div >
+                <form id="myForm" class="search-container" >
+                        <i class="fa fa-search"></i>
+                        <input type="text" name="search" placeholder="Blade Runner">
+                        <button id="search">Search</button>
+                </form>
+            </div>
+        <!-- </div> -->
         <div class="movie-list movie-list-margin" id="movie-list">
             <img src="images/movie-roll.png" class="filler-img" />
             <p>Start exploring</p>
         </div>
+                                       
     </div>
     <script src="/index.js" type="module"></script>
 </body>
