--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 </head>
 
 <body>
-    <div class="container" id="list">
+    <div class="container" id="container">
         <div class="header-div">
             <header>
                 <p>Find your film</p>
                 <a href="watchlist.html">My Watchlist</a>
             </header>
         </div>
-        <!-- <div> -->
             <div >
                 <form id="myForm" class="search-container" >
                         <i class="fa fa-search"></i>
@@ -33,7 +32,6 @@
                         <button id="search">Search</button>
                 </form>
             </div>
-        <!-- </div> -->
         <div class="movie-list movie-list-margin" id="movie-list">
             <img src="images/movie-roll.png" class="filler-img" />
             <p>Start exploring</p>
