--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header-div">
             <header>
                 <p>Find your film</p>
-                <a href="watchlist.html">My Watchlist</a>
+                <a href="watchlist.html" id="watchlist" >My Watchlist</a>
             </header>
         </div>
             <div >
