--- a/watchlist.html
+++ b/watchlist.html
@@ -25,7 +25,7 @@
                 <a href="index.html">Search for movies</a>
             </header>
         </div>
-        <div class="movie-list movie-list-margin" id="movie-list">
+        <div class="movie-list movie-list-margin white"  id="movie-list">
                 <p>
                 Your watchlist is looking a little empty...
                 </p>
