--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         </div>
                                        
     </div>
+    <i class="fa-solid fa-circle-up" id="scroll-btn" title="Go to top"></i>
+    <!-- <button id="scroll-btn" title="Go to top">Top</button> -->
     <script src="/index.js" type="module"></script>
 </body>
 
